syntax = "proto3";

package identity;

option go_package   = "github.com/tu-org/proto/genproto/go/identity;identitypb";
option java_multiple_files = true;
option java_package = "com.tagoKoder.identity.proto";
option java_outer_classname = "IdentityProto";

import "google/protobuf/empty.proto";

service IdentityService {
  // Usa el ID token en Authorization: Bearer <id_token>
  rpc Link (google.protobuf.Empty) returns (LinkResponse);

  // Usa el Access token en Authorization: Bearer <access_token>
  rpc WhoAmI (google.protobuf.Empty) returns (WhoAmIResponse);
}

message PersonView {
  int64  id         = 1;
  string name       = 2;
  string last_name  = 3;
  string email      = 4;
}

message LinkResponse {
  int64 account_id = 1;
  PersonView person = 2;
}

message WhoAmIResponse {
  int64 account_id = 1;
  PersonView person = 2;
}
